--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
+    "css-loader": "^0.28.10",
     "eslint": "^4.18.1",
+    "favicons-webpack-plugin": "^0.0.7",
     "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.20.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^4.1.1"
