--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "favicons-webpack-plugin": "^0.0.7",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^4.1.1"
